--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "gatsby": "^3.3.0",
     "gatsby-image": "^3.3.0",
+    "gatsby-plugin-image": "^1.5.0",
     "gatsby-plugin-manifest": "^3.3.0",
     "gatsby-plugin-offline": "^4.3.0",
     "gatsby-plugin-react-helmet": "^4.3.0",
@@ -19,10 +20,12 @@
     "gatsby-transformer-sharp": "^3.3.0",
     "html-react-parser": "^1.1.1",
     "lodash": "^4.17.20",
+    "mitt": "^2.1.0",
     "postcss": "^8.2.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^5.2.1",
+    "styled-components": "^5.3.0",
     "typeface-merriweather": "1.1.13",
     "typeface-montserrat": "1.1.13"
   },
