--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-manifest": "^3.3.0",
     "gatsby-plugin-offline": "^4.3.0",
     "gatsby-plugin-react-helmet": "^4.3.0",
+    "gatsby-plugin-sass": "^4.6.0",
     "gatsby-plugin-sharp": "^3.3.0",
     "gatsby-source-filesystem": "^3.3.0",
     "gatsby-source-wordpress": "^5.3.0",
@@ -21,6 +22,7 @@
     "html-react-parser": "^1.1.1",
     "lodash": "^4.17.20",
     "mitt": "^2.1.0",
+    "node-sass": "^6.0.0",
     "postcss": "^8.2.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
