--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "@blueprintjs/core": "^3.45.0",
     "@fontsource/arapey": "^4.4.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "gatsby": "^3.3.0",
-    "gatsby-image": "^3.3.0",
+    "@material-ui/core": "^4.11.4",
+    "gatsby": "^3.6.2",
+    "gatsby-image": "^3.6.0",
     "gatsby-plugin-image": "^1.5.0",
     "gatsby-plugin-manifest": "^3.3.0",
     "gatsby-plugin-offline": "^4.3.0",
@@ -26,7 +28,7 @@
     "gatsby-transformer-sharp": "^3.3.0",
     "html-react-parser": "^1.1.1",
     "install": "^0.13.0",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "mitt": "^2.1.0",
     "node-sass": "^6.0.0",
     "npm": "^7.15.0",
