--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@blueprintjs/core": "^3.45.0",
+    "@blueprintjs/popover2": "^0.10.1",
     "@fontsource/arapey": "^4.4.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
@@ -36,6 +37,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^5.2.1",
+    "react-media": "^1.10.0",
     "styled-components": "^5.3.0",
     "typeface-merriweather": "1.1.13",
     "typeface-montserrat": "1.1.13"
